--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.bd-sidebar {
+    grid-area: sidebar;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bd-main {
+    grid-area: main
+}
+
+@media (max-width: 767.98px) {
+    .bd-sidebar {
+        margin: 0 -.75rem 1rem;
+    }
+
+    .bd-links > ul {
+        padding: 1.5rem .75rem;
+        background-color: #f8f9fa;
+        border-bottom: 1px solid #e9ecef;
+    }
+}
+
+@media (min-width: 768px) {
+    .bd-main {
+        display: grid;
+        gap: inherit;
+        grid-template-areas: "intro" "toc" "content";
+        grid-template-rows: auto auto 1fr
+    }
+
+    .bd-layout {
+        display: grid;
+        gap: 1.5rem;
+        grid-template-areas: "sidebar main";
+        grid-template-columns: 1fr 3fr
+    }
+
+    .bd-links {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        display: block !important;
+        height: calc(100vh - 7rem);
+        padding-left: .25rem;
+        margin-left: -.25rem;
+        overflow-y: auto
+    }
+}
+
+@media (min-width: 992px) {
+    .bd-main {
+        grid-template-areas:"intro   toc" "content toc";
+        grid-template-columns: 4fr 1fr;
+        grid-template-rows: auto 1fr
+    }
+
+    .bd-layout {
+        grid-template-columns:1fr 5fr
+    }
 }
